# Data_Science

./: .gitignore  README.md  pyproject.toml
Hadoop/code/: main.py
Mlflow/tutorial_stuff/: mlflow.db  rubert_part1.ipynb
Pytorch/: checkpoint.pth
Pytorch/3d_point_cloud/: first_try.py  pcd.py
Pytorch/autoencoder/: autoencoder.py  linear_autoencoder.py  theory.txt
Pytorch/tutorial_stuff/: 02_gradient_calc.py  04_gradient_descent_manual.py  05_gradient_descent_torch.py  07_linear_regression.py  08_logistic_regression.py  09_dataloader.py  10_dataset_tranfomation.py  11_1_softmax_and_crossEntropy.py  12_activation_functions.py  13_feed_forward_nn.py  15_transfer_learning.py  16_TensorBoard.py  17_2_checkpoints.py
Sklearn/tutorial_stuff/: 00_prepare_data.ipynb  02_KNN.py  03_SVM.py  04_logistic_regression.ipynb  05_metrics.ipynb  05_metrics.py  06_meta_estimators.ipynb
Tensorflow/Semantic Analysis/: sentiment_analysis_model.h5  training.py
Tensorflow/tutorial_stuff/: 01_basics.py  02_neural_network.py  03_LinearRegression.ipynb  04_CNN.py  05_save_and_load_models.py  06_functional_api.py  07_example.ipynb  08_lego_classification.ipynb  09_transfer_learning.ipynb  10_RNN.py  11_autoencoder.py
langgraph/: main.py
scikit-learn/tutorial_stuff/: 01_load_data.py  02_KNN.py
torch/: model.pth
torch/3d_point_cloud/: ScreenCamera_2023-08-25-14-16-50.json  graphics_stanford.py
torch/autoencoder/: convolutional_autoencoder.py
torch/open_3d_tut/: intro.ipynb
torch/tutorial_stuff/: 01_tensor_basics.py  03_backprop.py  11_2_examples.py  14_1_CNN_test.py  (+2 more)
(+58 files in other folders)
